@@ -1,6 +1,7 @@
 Revision history for Marquee
 
 0.25 2013/05/31
+  - Added SCSS plugin
 
 0.24 2013/05/31
   - Fixed a bug on Official site example.
